--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/agave.min.css");
+
 body, button {
     font-family: "Agave", monospace;
 }
