--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,28 @@
-@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/agave.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Forum&display=swap');
 
-body, button {
-    font-family: "Agave", monospace;
+body {
+    font-family:  "Cormorant Garamond", Georgia, serif;
+    background-color: #F0F8FF;
+    color: #002E63;
+}
+
+header {
+    text-align: center;
+}
+
+
+h3, footer {
+    font-style: italic;
+}
+
+footer {
+    font-size: small;
 }
 
 a, a:hover {
-    text-decoration: none;
+    color: #4D4DFF;
+}
+
+dd {
+    margin-left: 2em;
 }
